--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -10,3 +10,15 @@
     width: 32rem;
     margin: 0 auto;
 }
+
+.side-nav {
+    background: #232323 !important;
+}
+
+.side-nav li > a {
+    color: #FFF !important;
+}
+
+.side-nav li > a > i{
+    color: #FFF !important;
+}
