adjusted css and layout

--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -3,7 +3,7 @@
 }
 
 #menu nav {
-    background: #FF6928;
+    background: #e65100;
 }
 
 .ul-center {
@@ -12,7 +12,7 @@
 }
 
 .side-nav {
-    background: #232323 !important;
+    background: #212223 !important;
 }
 
 .side-nav li > a {
