--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,8 @@
 .App {
   height: 100vh;
-  background: #313335;
+  background: #313335 url("../img/08.jpg") no-repeat fixed center;
+  height: 100vh;
+  width: 100vw;
 }
 
 .particles {
