--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -2,7 +2,9 @@
   height: 100vh;
   background: #313335 url("../img/08.jpg") no-repeat fixed center;
   height: 100vh;
-  width: 100vw; }
+  width: 100vw;
+}
 
 .particles {
-  z-index: 1; }
+  z-index: 1;
+}
