create my description box

--- a/src/css/AboutMe.scss
+++ b/src/css/AboutMe.scss
@@ -4,6 +4,10 @@
     img{
       width: 15rem;
     }
+
+    .description-box {
+      color: #fff;
+    }
 }
 
 @media screen and (min-width: 600px) {
