--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,121 +1,134 @@
-.home-content {
-  display: flex;
-  align-items: initial;
-  margin-top: 2rem;
+.main-content {
+  background: url('/assets/cloud_bg.jpg') no-repeat fixed center;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
-  .presentation-box {
-    padding: 0.5rem;
-    margin: 0 0 1rem 1rem;
+  .home-content {
+    display: flex;
+    align-items: initial;
+    margin-top: 2rem;
+    margin: 0;
+    padding: 0;
+
+    .presentation-box {
+      padding: 0.5rem;
+      margin: 0 0 1rem 1rem;
+    }
   }
-}
 
-.yoda-box {
-  display: flex;
-  justify-content: flex-end;
+  .yoda-box {
+    display: flex;
+    justify-content: flex-end;
 
-  .yoda {
-    padding: 1rem;
-    position: absolute;
-    bottom: 0;
-
-    img {
-      width: 11rem;
-    }
-
-    .speech-bubble {
-      display: flex;
-      justify-content: center;
-      position: relative;
-      background: #f6fafa;
-      border-radius: .4em;
-      padding: 0.4rem;
-      font-family: 'Risque';
-
-      span {
-        font-size: 1.5rem;
-      }
-    }
-
-    .speech-bubble:after {
-      content: '';
+    .yoda {
+      padding: 1rem;
       position: absolute;
       bottom: 0;
-      left: 50%;
-      width: 0;
-      height: 0;
-      border: 30px solid transparent;
-      border-top-color: #f6fafa;
-      border-bottom: 0;
-      border-left: 0;
-      margin-left: -15px;
-      margin-bottom: -28px;
+
+      img {
+        width: 11rem;
+      }
+
+      .speech-bubble {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        background: #f6fafa;
+        border-radius: .4em;
+        padding: 0.4rem;
+        font-family: 'Risque';
+
+        span {
+          font-size: 1.5rem;
+        }
+      }
+
+      .speech-bubble:after {
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 50%;
+        width: 0;
+        height: 0;
+        border: 30px solid transparent;
+        border-top-color: #f6fafa;
+        border-bottom: 0;
+        border-left: 0;
+        margin-left: -15px;
+        margin-bottom: -28px;
+      }
     }
   }
-}
 
-.lightsaber {
-  margin-top: 1rem;
-  width: 10px;
-  transform-origin: 40% 111%;
-  transform: rotate(90deg);
-}
-
-.back{
-  width: 10px;
-  position: relative;
-  transform: rotate(180deg);
-}
-
-  .open {
-    .outer_glow{ height: 14rem; animation: glow_animation 0.8s infinite ;}
-    .middle_glow{ height: 14rem; animation: glow_animation 0.8s infinite ;}
-    .core_glow{ height: 14rem;}
+  .lightsaber {
+    margin-top: 1rem;
+    width: 10px;
+    transform-origin: 40% 111%;
+    transform: rotate(90deg);
   }
 
-.outer_glow{
-  height: 0px;
-  width: 26px;
-  border-radius:5px;
+  .back{
+    width: 10px;
+    position: relative;
+    transform: rotate(180deg);
+  }
 
-  filter: blur(10px);
+    .open {
+      .outer_glow{ height: 14rem; animation: glow_animation 0.8s infinite ;}
+      .middle_glow{ height: 14rem; animation: glow_animation 0.8s infinite ;}
+      .core_glow{ height: 14rem;}
+    }
+
+  .outer_glow{
+    height: 0px;
+    width: 26px;
+    border-radius:5px;
+
+    filter: blur(10px);
+      position: absolute;
+      left: -8px;
+      top: 3.7rem;
+      transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+  }
+  .middle_glow{
+    height: 0px;
+    width: 10px;
+    border-radius:5px;
     position: absolute;
-    left: -8px;
     top: 3.7rem;
+    filter: blur(2px);
     transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
-}
-.middle_glow{
-  height: 0px;
-  width: 10px;
-  border-radius:5px;
-  position: absolute;
-  top: 3.7rem;
-  filter: blur(2px);
-  transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
-}
-.core_glow{
-  height: 0px;
-  width: 6px;
-  background-color: #fff;
-  border-radius:5px;
-  position: absolute;
-  top: 3.7rem;
-  filter: blur(1px);
-  transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
-  left: 2px;
-}
+  }
+  .core_glow{
+    height: 0px;
+    width: 6px;
+    background-color: #fff;
+    border-radius:5px;
+    position: absolute;
+    top: 3.7rem;
+    filter: blur(1px);
+    transition: all 0.6s cubic-bezier(0.860, 0.000, 0.070, 1.000);
+    left: 2px;
+  }
 
-.handle{
-  height: 30px;
-  width: 55px;
-  position: absolute;
-  top:0;
-  left: -22px;
-  cursor:pointer;
-}
-.handle img{
-  width: 100%;
-  height: auto;
-  transform: rotate(90deg);
+  .handle{
+    height: 30px;
+    width: 55px;
+    position: absolute;
+    top:0;
+    left: -22px;
+    cursor:pointer;
+  }
+  .handle img{
+    width: 100%;
+    height: auto;
+    transform: rotate(90deg);
+  }
 }
 
 @keyframes glow_animation {
