--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,20 +1,21 @@
 <div class="container">
   <div class="skills">
 
-    <mat-card class="skill-card">
+    <mat-card class="skill-card" *ngFor="let skill of skills">
       <mat-card-header>
         <mat-card-title>Front-end</mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
-        <div class="icon-panel" *ngFor="let item of frontend">
+        <div class="icon-panel" *ngFor="let item of skill">
           <div class="icon-box">
-            <img src="{{item.url}}" width="72" alt="item.name">
+            <img src="{{item.url}}" width="72" height="72" alt="item.name">
             {{item.name}}
           </div>
         </div>
       </mat-card-content>
 
     </mat-card>
+
   </div>
 </div>
