refactor and created skill interface

--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -3,14 +3,14 @@
 
     <mat-card class="skill-card" *ngFor="let skill of skills">
       <mat-card-header>
-        <mat-card-title>Front-end</mat-card-title>
+        <mat-card-title>{{ skill.name }}</mat-card-title>
       </mat-card-header>
 
       <mat-card-content>
-        <div class="icon-panel" *ngFor="let item of skill">
+        <div class="icon-panel" *ngFor="let item of skill.skills">
           <div class="icon-box">
-            <img src="{{item.url}}" width="72" height="72" alt="item.name">
-            {{item.name}}
+            <img src="{{ item.url }}" alt="{{ item.name }}">
+            {{ item.name }}
           </div>
         </div>
       </mat-card-content>
