--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,9 +4,13 @@
 @import '~animate.css';
 @import 'variables.scss';
 
-.container {
-  width: 80%;
-  margin: 0 auto;
+.main-container {
+  height: 100%;
+  overflow-y: hidden;
+  .container {
+    width: 80%;
+    margin: 0 auto;
+  }
 }
 
 .presentation-box {
