--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -11,6 +11,7 @@
     }
       .mat-card-content {
           display: flex;
+          flex-wrap: wrap;
           .icon-panel {
               flex-direction: row;
               .icon-box {
