oracle certified img

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,7 +11,8 @@
       </p>
     </div>
     <div class="img-panel">
-        <img src="/assets/mlassakoski.jpg" alt="" class="responsive-img">
+        <img src="/assets/mlassakoski.png" alt="" class="responsive-img">
     </div>
   </div>
+  <img src="/assets/oracle_logo.png" width="400" alt="oracle cerfified" class="responsive-img">
 </div>
