--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,9 +6,9 @@
 
 .main-container {
   height: 100%;
-  overflow-y: hidden;
+  overflow-x: hidden;
   .container {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
   }
 }
@@ -42,6 +42,14 @@
 @media (min-width: 700px) {
   .letter {
       font-size: 3.7em;
+  }
+}
+
+@media (min-width: 1360px) {
+  .main-container {
+    .container {
+      width: 60%;
+    }
   }
 }
 
