--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -4,7 +4,6 @@
     flex-direction: column;
     justify-content: space-between;
     .text-panel {
-        margin: 0 0 2rem 0;
         padding: 1rem;
         max-width: 100%;
         .intro {
@@ -18,8 +17,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin: 1rem 0 1rem 0;
       img {
-        width: 25rem;
+        width: 20rem;
       }
     }
 }
@@ -27,11 +27,17 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin: 1rem 0 1rem 0;
 }
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1024px) {
   .about-me {
     .text-panel {
         margin: 0 2rem 2rem 0;
+    }
+    .img-panel {
+      img {
+        width: 23rem;
+      }
     }
 }
 }
