--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,34 @@
 <div class="main-container">
   <mat-toolbar class="toolbar-menu">
+    <div class="teste">
+      <button class="hide-on-med-and-up" mat-icon-button (click)="snav.toggle()">
+        <mat-icon>menu</mat-icon>
+      </button>
 
-    <button class="hide-on-med-and-up" mat-icon-button (click)="snav.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
+      <!-- logo -->
+      <div class="hide-on-small-only">
 
-    <!-- logo -->
-    <div class="hide-on-small-only">
+      </div>
 
-    </div>
+      <!-- menu items -->
+      <ul>
+        <li *ngFor="let item of menu" class="hide-on-small-only">
+          <a [routerLink]="item.url">
+            <mat-icon>{{item.icon}}</mat-icon>
+            {{item.name}}
+          </a>
+        </li>
+      </ul>
 
-    <!-- menu items -->
-    <ul>
-      <li *ngFor="let item of menu" class="hide-on-small-only">
-        <mat-icon>{{item.icon}}</mat-icon>
-        <a [routerLink]="item.url">{{item.name}}</a>
-      </li>
-    </ul>
-
-    <!-- social media -->
-    <div class="social-media-icon">
-      <a href="https://github.com/mlassakoski" target="_blank">
-        <i class="fa fa-github fa-2x" aria-hidden="true"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/mauriciolassakoski" target="_blank">
-        <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
-      </a>
+      <!-- social media -->
+      <div class="social-media-icon">
+        <a href="https://github.com/mlassakoski" target="_blank">
+          <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/mauriciolassakoski" target="_blank">
+          <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+        </a>
+      </div>
     </div>
   </mat-toolbar>
 
