--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,11 @@
 // @import '@scss/variables.scss';
 $snav-bg: #262728;
 $nav-item-color: #fff;
-$nav-item-color-hover: #00B09A;
+$nav-item-color-hover: #bbb;
 .toolbar-menu {
+  background: $snav-bg;
+  .teste {
+
     display: flex;
     justify-content: space-between;
     background: $snav-bg;
@@ -18,6 +21,8 @@ $nav-item-color-hover: #00B09A;
                 margin-right: 0.3rem;
             }
             a {
+                display: flex;
+                align-items: center;
                 color: $nav-item-color;
                 cursor: pointer;
                 &:hover {
@@ -41,10 +46,7 @@ $nav-item-color-hover: #00B09A;
             }
         }
     }
-}
-
-.mat-icon {
-    color: $nav-item-color;
+  }
 }
 
 .snav-container {
