media icon margin

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <mat-toolbar class="toolbar-menu">
-    <div class="teste">
+    <div class="nav-menu">
       <button class="hide-on-med-and-up" mat-icon-button (click)="snav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
