--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,34 +1,26 @@
-.main-content {
-  background: url('/assets/cloud_bg.jpg') no-repeat fixed center;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  .home {
+    background: #383838;
+    height: 100%;
+    width: 100%;
+    position: fixed;
 
-  .home-content {
-    display: flex;
-    align-items: initial;
-    margin-top: 2rem;
-    margin: 0;
-    padding: 0;
+    .container {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      height: 100%;
 
     .presentation-box {
       padding: 0.5rem;
-      margin: 0 0 1rem 1rem;
+      width: 90%;
+      margin: 2rem auto;
     }
-  }
 
   .yoda-box {
     display: flex;
     justify-content: flex-end;
-
     .yoda {
       padding: 1rem;
-      position: absolute;
-      bottom: 0;
 
       img {
         width: 11rem;
@@ -63,6 +55,8 @@
         margin-bottom: -28px;
       }
     }
+  }
+}
   }
 
   .lightsaber {
@@ -129,7 +123,6 @@
     height: auto;
     transform: rotate(90deg);
   }
-}
 
 @keyframes glow_animation {
   0% {
@@ -153,9 +146,7 @@
 }
 
 @media (min-width: 370px) {
-  .home-content {
-    margin-top: 5rem;
-
+  .home {
     .presentation-box {
       padding: 1.5rem;
       margin: 0 0 1rem 1rem;
@@ -164,19 +155,19 @@
 }
 
 @media (min-width: 700px) {
-  .home-content {
+  .home {
     .presentation-box {
       margin-left: 2rem;
     }
-  }
-
-  .yoda-box {
-    .yoda {
-      img {
-        width: 18rem;
+    .yoda-box {
+      .yoda {
+        img {
+          width: 18rem;
+        }
       }
     }
   }
+
 
   .open{
     .outer_glow{ height: 22rem; animation: glow_animation 0.8s infinite ;}
