bar-chart component

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -17,14 +17,8 @@
   </div>
 
   <div class="skill-panel">
-    <ngx-charts-bar-horizontal
-      [scheme]="scheme"
-      [results]="single"
-      [yAxis]="showYAxis"
-      [showGridLines]="showGridLines"
-      (window:resize)="onResize($event)"
-      [view]="view">
-    </ngx-charts-bar-horizontal>
+
+    <mlassakoski-bar-chart [data]="skills"></mlassakoski-bar-chart>
 
     <!-- <img src="/assets/oracle_logo.png" alt="oracle cerfified" class="responsive-img"> -->
   </div>
