--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -36,7 +36,7 @@
                       background: #f6fafa;
                       border-radius: .4em;
                       padding: 0.4rem;
-                      font-family: 'Risque';
+                      font-family: 'Roboto';
                       span {
                           font-size: 1.5rem;
                       }
